# Smart_Tank_Monitor

./: README.md
CUS/: .gitignore  README.md  cus_main.py  pyproject.toml
CUS/src/: __init__.py  business_logic.py  config.py  http_server.py  mqtt_handler.py  serial_handler.py  state_manager.py
DBS/: README.md  READMEtodelete.md  index.html
DBS/css/: styles.css
DBS/js/: api.js  app.js  chart.js  config.js  controls.js
TMS/: README.md  TECHNICAL_DOC.md  platformio.ini
TMS/src/: config.h  main.cpp
TMS/src/devices/: Sonar.cpp
TMS/src/kernel/: MQTTClient.cpp  MQTTClient.h  Scheduler.cpp  Scheduler.h
TMS/src/model/: HWPlatform.cpp  HWPlatform.h  TMSState.cpp  TMSState.h  WaterLevelData.cpp  WaterLevelData.h
TMS/src/task/: LEDTask.cpp  LEDTask.h  MQTTTask.cpp  MQTTTask.h  MonitoringTask.cpp  MonitoringTask.h
WCS/: README.md  platformio.ini
WCS/src/: config.h  main.cpp
WCS/src/devices/: button.h  buttonimpl.cpp  buttonimpl.h  lcd.cpp  lcd.h  pot.cpp  pot.h  servoMotorImpl.cpp  servoMotorImpl.h  servoTimer2.cpp
WCS/src/kernel/: MsgService.cpp  MsgService.h  SerialComm.cpp  SerialComm.h  logger.cpp  logger.h  scheduler.cpp
WCS/src/model/: HWPlatform.cpp  HWPlatform.h
WCS/src/tasks/: WCSTask.cpp  WCSTask.h
doc/: report.md
