[project]
name = "cus"
version = "1.0.0"
description = "Control Unit Subsystem for Smart Tank Monitoring System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "paho-mqtt==1.6.1",
    "pyserial==3.5",
    "flask==3.0.0",
    "flask-cors==4.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
